# RAG101

./: .gitignore  main.py  pyproject.toml
notebooks/: test_mongoDB.ipynb
src/: architecture.md
src/database/: document_manager.py
src/document_processing/: __init__.py  chunker.py  collector.py  loader.py  pipeline.py  processor.py
